Add caching for depends builds

--- a/.github/workflows/standard-build.yml
+++ b/.github/workflows/standard-build.yml
@@ -9,6 +9,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Cache Primes
+        id: cache-primes
+        uses: actions/cache@v2
+        with:
+          path: depends/
+          key: ${{ runner.os }}-${{ hashFiles('depends/packages/*.mk') }}
+
       - name: Update apt repos
         run: sudo apt-get update
 
