--- a/.github/workflows/standard-build.yml
+++ b/.github/workflows/standard-build.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Install base dependencies
         run: sudo apt-get install build-essential libtool autotools-dev automake pkg-config bsdmainutils libattr1-dev make automake cmake curl g++-multilib binutils-gold python3
       
-      - name: Install base dependencies
-        if: ${{ matrix.os }} == 'x86_64-w64-mingw32'
+      - name: Install MinGW32 dependencies
+        if: matrix.os == 'x86_64-w64-mingw32'
         run: sudo apt-get install g++-mingw-w64-x86-64 && sudo update-alternatives --config x86_64-w64-mingw32-g++
 
       - name: Build depends
