--- a/.github/workflows/standard-build.yml
+++ b/.github/workflows/standard-build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: depends/
-          key: ${{ runner.os }}-${{ hashFiles('depends/packages/*.mk') }}
+          key: ${{ matrix.os }}-${{ hashFiles('depends/packages/*.mk') }}
 
       - name: Update apt repos
         run: sudo apt-get update
@@ -48,7 +48,3 @@ jobs:
 
       - name: make
         run: make -j4
-
-      - name: make check
-        if: matrix.os == 'x86_64-linux-gnu'
-        run: make check -j4
